final draft of first robomasters teaching session

--- a/robomasters-cvintro.ipynb
+++ b/robomasters-cvintro.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
    "source": [
     "One of the most important conversions that you will often need to make is the conversion to HSV. HSV stands for \"hue, saturation, value\" and is represented by the graphic below.\n",
     "\n",
-    "![hsv](https://i.pinimg.com/originals/9d/db/c1/9ddbc1080e2b85241ebf04b3b27cfa0a.png)\n",
+    "![hsv](https://www.mathworks.com/help/images/hsvcone.gif)\n",
     "\n",
     "When working with computervision it is often desired to convert images to HSV due to the increased ease in segmenting the color values. Observe the example below.\n",
     "\n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,12 +279,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, in the cell below, the image is converted to HSV. Notice how the headlights are seperated from the rest of the image."
+    "However, in the cell below, the image is converted to HSV. Notice how the headlights are seperated from the rest of the image. Notice in the `cvtColor` function `COLOR_BGR2HSV` is used as the value for the conversion."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,12 +299,40 @@
    "metadata": {},
    "source": [
     "## Isolate Elements\n",
-    "Now that we have converted the image to a more desireable color system, it is time to actually try separating the important elements from the background. To do this we will define a range of values to look for in the image. In OpenCV, hue ranges from 0 to 179, while saturation and value range from 0 to 255. To isolate important elements we will simply define a range of these values to isolate. Observe the example below with the car image again."
+    "Now that we have converted the image to a more desireable color system, it is time to actually try separating the important elements from the background. To do this we will define a range of values to look for in the image using numpy arrays. In OpenCV, hue ranges from 0 to 179, while saturation and value range from 0 to 255. To isolate important elements we will simply define a range of these values to isolate using OpenCV's `inRange` function and use it as a mask for a `bitwise_and`. Observe the example below with the car image again."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lower = np.array([0,30,0]) # define lower hsv range\n",
+    "upper = np.array([10,255,255])# define upper hsv range\n",
+    "mask = cv2.inRange(hsv_image, lower, upper)# define a mask using the range\n",
+    "        \n",
+    "headlights = cv2.bitwise_and(hsv_image, hsv_image, mask=mask) # bitwise and the using the mask\n",
+    "\n",
+    "cv2.imshow('image', headlights) # show the image\n",
+    "cv2.waitKey(0) # wait until any key is pressed\n",
+    "cv2.destroyAllWindows() # destroy all windows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You may notice that something isn't right here. Did we isolate the full range of reds in the image?\n",
+    "\n",
+    "![car](./car.jpg)\n",
+    "\n",
+    "Unfortunately we have not isolated all of the red in the image. This is because in HSV red is is not only roughly values 0 to 10 but also values 160 to 179. To account for this we must also use that range to isolate red as well and then add the two ranges together."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,9 +348,9 @@
     "\n",
     "headlights_2 = cv2.bitwise_and(hsv_image, hsv_image, mask=mask_2)\n",
     "\n",
-    "result = headlights_1+headlights_2\n",
+    "headlights = headlights_1 + headlights_2\n",
     "\n",
-    "cv2.imshow('image', result) # show the image\n",
+    "cv2.imshow('image', headlights) # show the image\n",
     "cv2.waitKey(0) # wait until any key is pressed\n",
     "cv2.destroyAllWindows() # destroy all windows"
    ]
@@ -332,17 +360,17 @@
    "metadata": {},
    "source": [
     "## Blur\n",
-    "The next step is to blur the result from isolating the elements we want. It's very hard to achieve a perfect isolation of the elements that we want, so to improve our isolation we use a blur. Which requires us first to convert back to BGR."
+    "The next step is to blur the result from isolating the elements we want. It's very hard to achieve a perfect isolation of the elements that we want, so to improve our isolation we use a blur which effectively averages the isolated section. To blur we must first convert back to BGR using `cvtColor` and `COLOR_HSV2BGR`. Next we use `GaussianBlur` to blur the image. `GaussianBlur` requires us to give four parameters: the first is the image we want to blur, the second is the kernel size which must be positive and odd, and the third and fourth parameters are used for the standard deviation of the gaussian blur (setting them to zero means that we want them to be computed from the kernel size)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bgr_headlights = cv2.cvtColor(result, cv2.COLOR_HSV2BGR)\n",
-    "blurred_headlights = cv2.GaussianBlur(bgr_headlights, (5,5), 0)    \n",
+    "bgr_headlights = cv2.cvtColor(headlights, cv2.COLOR_HSV2BGR)\n",
+    "blurred_headlights = cv2.GaussianBlur(bgr_headlights, (5,5), 0, 0)    \n",
     "cv2.imshow('Blurred', blurred_headlights)\n",
     "cv2.waitKey(0) # wait until any key is pressed\n",
     "cv2.destroyAllWindows() # destroy all windows"
@@ -353,12 +381,12 @@
    "metadata": {},
    "source": [
     "## Thresholding\n",
-    "Thresholding means to convert the pixels in an image to a consistent color if it is above a certain value and to another color if it is below a certain value. See below."
+    "Thresholding means to convert the pixels in an image to a consistent color if it is above a certain value and to another color if it is below a certain value. To do thism the `threshold` function is used which requires four parameters: the first is the image that we wish to threshold, the second parameter is the threshold value , the third parameter is the maximum value, and the fourth value is the type of threshold. For this example we are using the simplest thresholding type which is `THRESH_BINARY`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,46 +400,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Detecting Shapes"
+    "## Detecting Shapes\n",
+    "We must now define a function to detect the shapes in the image. To do this we will use something called countours. Contours are simply a list of points that form the edge of a boundary of a shape. The `detect` function defined below takes in a contour as a parameter. \n",
+    "\n",
+    "To approximate the number of points around a shape we will use two functions. The first, `arcLength`, gets the arc length of the contour. The second function, `approxPolyDP` returns a list of vertices for the approximate polygon. To understand these functions in more detail I encourage you to read up on them using the links below.\n",
+    "\n",
+    "[cv2.arcLength](https://docs.opencv.org/3.4/d3/dc0/group__imgproc__shape.html#ga8d26483c636be6b35c3ec6335798a47c)\n",
+    "\n",
+    "[cv2.approxPolyDP](https://docs.opencv.org/3.4/d3/dc0/group__imgproc__shape.html#ga0012a5fdaea70b8a9970165d98722b4c)\n",
+    "\n",
+    "Then we simply count the number of verticies in the list to determine the shape."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "def detect(c):\n",
     "        # initialize the shape name and approximate the contour\n",
     "        shape = \"unidentified\"\n",
-    "        peri = cv2.arcLength(c, True)\n",
-    "        approx = cv2.approxPolyDP(c, 0.06 * peri, True)\n",
+    "        arc_length = cv2.arcLength(c, True)\n",
+    "        approx = cv2.approxPolyDP(c, 0.06 * arc_length, True)\n",
+    "        \n",
     "        # if the shape is a triangle, it will have 3 vertices\n",
     "        if len(approx) == 3:\n",
     "            shape = \"triangle\"\n",
     " \n",
-    "        # if the shape has 4 vertices, it is either a square or\n",
-    "        # a rectangle\n",
+    "        # if the shape has 4 vertices it is a rectangle\n",
     "        elif len(approx) == 4:\n",
-    "            # compute the bounding box of the contour and use the\n",
-    "            # bounding box to compute the aspect ratio\n",
-    "            (x, y, w, h) = cv2.boundingRect(approx)\n",
-    "            ar = w / float(h)\n",
-    " \n",
-    "            # a square will have an aspect ratio that is approximately\n",
-    "            # equal to one, otherwise, the shape is a rectangle\n",
-    "            if ar >= 0.95 and ar <= 1.05:\n",
-    "                shape = \"square\"\n",
-    "            elif ar <= 0.50:\n",
-    "                shape = \"lightbar\"\n",
-    "            else:\n",
-    "                shape = \"rectangle\"\n",
+    "            shape = \"rectangle\"\n",
     "                 \n",
     "        # if the shape is a pentagon, it will have 5 vertices\n",
     "        elif len(approx) == 5:\n",
     "            shape = \"pentagon\"\n",
     " \n",
-    "        # otherwise, we assume the shape is a circle\n",
+    "        # otherwise we will define the shape as a circle\n",
     "        else:\n",
     "            shape = \"circle\"\n",
     " \n",
@@ -420,48 +445,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 134,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rectangle\n",
-      "rectangle\n",
-      "rectangle\n",
-      "rectangle\n",
-      "pentagon\n"
-     ]
-    }
-   ],
+   "source": [
+    "Now the countours must be found so that they can be input into the `detect` function that we have created. To do this we must first convert our image back to grayscale. Then we can use the `findContours` function to create a list of contours in the image. The first parameter to `findContours` is the grayscale image, the second parameter is `RETR_EXTERNAL` which means that we are only interested in the outermost boundary contours, and the third parameter is our approximation type which we will leave as `CHAIN_APPROX_SIMPLE`.\n",
+    "\n",
+    "Then we simply enter a for loop which iterates over all of the contours in the image and call our `detect` function on each contour. We then get a value which indicates whether the shape is a rectangle (a headlight). Next we can then draw the contours which outlines the shape and also draw the bounding box around the headlight using the approximate points of the verticies on the original image."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "gray = cv2.cvtColor(thresh, cv2.COLOR_BGR2GRAY)\n",
     "\n",
-    "cnts = cv2.findContours(gray, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "cnts = cnts[0] if imutils.is_cv2() else cnts[1]\n",
+    "cnts = cv2.findContours(gray, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)[1]\n",
     "\n",
     "for c in cnts:\n",
-    "    try:\n",
-    "        M = cv2.moments(c)\n",
-    "        cX = int((M[\"m10\"] / M[\"m00\"]))\n",
-    "        cY = int((M[\"m01\"] / M[\"m00\"])) \n",
     "        \n",
-    "        shape, approx = detect(c)\n",
-    "        print(shape)\n",
+    "    shape, approx = detect(c)\n",
     "\n",
     "\n",
-    "        if shape == 'rectangle':\n",
-    "            cv2.drawContours(thresh, [c], -1, (0, 255, 0), 1)\n",
-    "            #cv2.putText(thresh, shape, (cX, cY), cv2.FONT_HERSHEY_SIMPLEX, 0.3, (255, 255, 255), 1)\n",
+    "    if shape == 'rectangle':\n",
+    "        cv2.drawContours(car_img, [c], -1, (0, 255, 0), 1)\n",
     "\n",
-    "            (x, y, w, h) = cv2.boundingRect(approx)\n",
-    "            cv2.rectangle(thresh,(x,y),(x+w,y+h),(0,255,0),1)\n",
-    "    except:\n",
-    "        pass\n",
-    "cv2.imshow('Threshold', thresh)\n",
-    "\n",
+    "        (x, y, w, h) = cv2.boundingRect(approx)\n",
+    "        cv2.rectangle(car_img,(x,y),(x+w,y+h),(0,255,0),1)\n",
+    "        \n",
+    "cv2.imshow('Final', car_img)\n",
     "cv2.waitKey(0) # wait until any key is pressed\n",
     "cv2.destroyAllWindows() # destroy all windows"
    ]
